--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/CarlosMs18/TaskNode_pug#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.19.0"
