--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/CarlosMs18/TaskNode_pug#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "sequelize": "^6.19.0"
   },
