--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
@@ -27,7 +28,9 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "shortid": "^2.2.16",
+    "slug": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
