--- a/package.json
+++ b/package.json
@@ -19,20 +19,30 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "concurrently": "^7.1.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "html-to-text": "^8.2.0",
+    "juice": "^8.0.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "sequelize": "^6.19.0",
     "shortid": "^2.2.16",
-    "slug": "^5.3.0"
+    "slug": "^5.3.0",
+    "sweetalert2": "^11.4.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "nodemon": "^2.0.16",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
